<resources>
    <string name="app_name">Health Place</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="all_questions">All questions</string>
    <string name="your_appointments">Your appointments</string>
    <string name="new_appointments">New appointments</string>
    <string name="question">Question</string>
    <string name="write_your_question_below_and_a_doctor_will_answer_you_as_soon_as_possible">Write your question below and a doctor will answer you as soon as possible</string>
    <string name="send">Send</string>
    <string name="all_questions_TV">All questions</string>
    <string name="provide_an_answer_to_the_patients">Provide an answer to the patients</string>
    <string name="welcome_doctor">Welcome, doctor</string>
    <string name="logout">Logout</string>
    <string name="welcome_patient">Welcome,</string>
    <string name="personal_information">Personal information</string>
    <string name="medical_history">Medical history</string>
    <string name="medical_appointment_n_t_t_t_t_t_tdetails">Medical appointment \n \t\t\t\t\t\tdetails</string>
    <string name="medical_tests_n_t_t_t_results">Medical tests\n\t\t\t results</string>
    <string name="t_t_t_tmake_online_nmedical_appointments">\t\t\t\tMake online \nmedical appointments</string>
    <string name="ask_a_question">Ask a question</string>
    <string name="price_of_medical_n_consultation">Price of medical \n consultation</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_account">Your account</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_in_button">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="visiblepassword">VisiblePassword</string>
    <string name="specialty">Specialty</string>
    <string name="services">Services</string>
    <string name="date_for_appointment">Date for appointment</string>
    <string name="doctors">Doctors</string>
    <string name="medical_specialty">Medical specialty</string>
    <string name="service">Service</string>
    <string name="doctor">Doctor</string>
    <string name="time">Time</string>
    <string name="time_TV">Time</string>
    <string name="save_appointment">Save appointment</string>
    <string name="your_medical_history">Your medical history</string>
    <string name="diagnosed_allergies_and_intolerances">Diagnosed allergies and intolerances</string>
    <string name="diagnosed_chronic_diseases">Diagnosed chronic diseases</string>
    <string name="interventions_and_procedures_performed">Interventions and procedures performed</string>
    <string name="immunization">Immunization</string>
    <string name="lines">---------------------</string>
    <string name="your_profile">Your profile</string>
    <string name="patient_code">Patient code:</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="nationality">Nationality</string>
    <string name="cnp">CNP</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="e_mail_ET">E-mail</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="the_following_data_can_t_be_changed_n_t_t_tlast_name_first_name_nationality_cnp_n_t_t_t_t_t_t_tdate_of_birth_and_gender">❕The following data can\'t be changed❕\n \t\t\tLast name, First Name, Nationality, CNP, \n\t\t\t\t\t\t\tDate of Birth and Gender.</string>
    <string name="first_name_Dr">First name:</string>
    <string name="last_name_Dr">Last name:</string>
    <string name="email_dr">Email:</string>
    <string name="department">Department:</string>
    <string name="employment_date">Employment date:</string>
    <string name="create_account">Create account</string>
    <string name="last_name_register">Last name</string>
    <string name="first_name_register">First name</string>
    <string name="e_mail_register">E-mail</string>
    <string name="phone_number_register">Phone number</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_up_register">Sign Up</string>
    <string name="password_register">Password</string>
    <string name="nationality_register">Nationality</string>
    <string name="cnp_regoster">CNP</string>
    <string name="date_of_birth_register">Date of birth</string>
    <string name="gender_register">Gender</string>
    <string name="address_register">Address</string>
    <string name="city_register">City</string>
    <string name="country_register">Country</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_the_new_password">Enter the new password</string>
    <string name="repeat_the_new_password">Repeat the new password</string>
    <string name="confirm">Confirm</string>
    <string name="your_tests_results">Your tests results</string>
    <string name="patient">Patient</string>
    <string name="answer">Answer</string>
    <string name="type_your_answer_here">Type your answer here:</string>
    <string name="name">Name</string>
    <string name="specialty_dr">Specialty</string>
    <string name="department_dr">Department</string>
    <string name="email_dr_cardView">Email</string>
    <string name="service_cardView">Service:</string>
    <string name="date">Date:</string>
    <string name="time_cardView">Time:</string>
    <string name="patient_name">Patient name:</string>
    <string name="patient_cardView">Patient</string>
    <string name="doctor_cardView">Doctor</string>
    <string name="lines_cardView">---------------------------------------------</string>
    <string name="service_dr">Service:</string>
    <string name="date_app">Date:</string>
    <string name="time_app">Time:</string>
    <string name="patient_name_app">Patient name:</string>
    <string name="department_app">Department:</string>
    <string name="service_app">Service:</string>
    <string name="doctor_app">Doctor:</string>
    <string name="date_appointment">Date:</string>
    <string name="time_appointment">Time:</string>
    <string name="cancel">Cancel</string>
    <string name="pacient_name">Pacient:</string>
    <string name="service_appointment">Service:</string>
    <string name="date_CardView">Date:</string>
    <string name="time_cardView_appointment">Time:</string>
    <string name="find_the_price">Find the price</string>
    <string name="select_the_specialty">Select the specialty</string>
    <string name="choose_specialty">Choose specialty</string>
    <string name="select_the_service">Select the service</string>
    <string name="choose_service">Choose service</string>
    <string name="ticket_of_referral">Ticket of referral</string>
    <string name="loyalty_card">Loyalty card</string>
    <string name="find_the_price_button">Find the price</string>
    <string name="full_price">Full price:</string>
    <string name="price_with_ticket_of_referral">Price with ticket of referral:</string>
    <string name="price_with_loyalty_card">Price with loyalty card:</string>
    <string name="salary">Salary:</string>
</resources>