<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundal">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="360dp"
        android:layout_height="368dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.157">

        <TextView
            android:id="@+id/textView"
            android:layout_width="270dp"
            android:layout_height="47dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/playball"
            android:text="@string/your_account"
            android:textAlignment="center"
            android:textColor="@color/royal_blue"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="340dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/royal_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/email"
            android:layout_width="340dp"
            android:layout_height="70dp"
            android:layout_marginTop="92dp"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/royal_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/login"
            android:layout_width="168dp"
            android:layout_height="53dp"
            android:layout_marginTop="296dp"
            android:background="@drawable/buton"
            android:text="@string/sign_in_button"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/seePassword"
            android:layout_width="39dp"
            android:layout_height="34dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/visiblepassword"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintTop_toTopOf="@+id/password"
            app:srcCompat="@drawable/unlocked"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="414dp"
        android:layout_height="232dp"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pic10"
        tools:ignore="ContentDescription" />

    <!--    medicalfam2-->
</androidx.constraintlayout.widget.ConstraintLayout>